--- a/app/src/main/res/layout/activity_rincian_kegiatan.xml
+++ b/app/src/main/res/layout/activity_rincian_kegiatan.xml
@@ -5,14 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.d3ifcool.rememberactivities.RincianKegiatanActivity">
-    <com.google.android.gms.maps.MapView
+    <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/mapView"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="250dp"
         android:background="#00000000"
         android:clickable="true"
+        android:focusable="true"
         map:uiCompass="true" />
     <LinearLayout
         android:layout_width="match_parent"
