--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFF"
+    android:background="@drawable/yoooo"
     android:weightSum="10"
     tools:context="org.d3ifcool.rememberactivities.HomeActivity">
 
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:layout_weight="2"
-    android:background="@color/colorMain">
+    android:layout_weight="2">
     <TextView
         android:id="@+id/textGrid"
         android:text="Remember Activities"
