--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:layout_width="130dp"
     android:layout_height="130dp"
     android:id="@+id/logo"
-    android:src="@drawable/alarm2"
+    android:src="@drawable/logoooo"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="30dp"
     android:layout_marginBottom="16dp"
