--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/yoooo"
+    android:background="@color/colorMain"
     android:weightSum="10"
     tools:context="org.d3ifcool.rememberactivities.HomeActivity">
 
