Alarm dan popup

--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="350dp"
+    android:layout_width="match_parent"
     android:layout_height="475dp"
     android:padding="5dp"
     android:layout_gravity="center"
@@ -13,12 +13,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <ImageView
-            android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:src="@drawable/alarm2"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+        <fragment
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/popUP_mapView"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#00000000"
+            android:clickable="true"
+            android:focusable="true"
+            map:uiCompass="true" />
+        <TextView
+            android:id="@+id/popUp_judul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jangan Lupa anda memiliki kegiatan"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="#000"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
             />
         <TextView
             android:id="@+id/popUp_namaKegiatan"
@@ -29,7 +44,7 @@
             android:textSize="25sp"
             android:textColor="#000"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             />
         <TextView
             android:id="@+id/popUp_jamMulaikegiatan"
