--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -61,6 +61,7 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
+                android:id="@+id/jeda"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
@@ -80,7 +81,8 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                >
                 <Button
                     android:id="@+id/popUp_tutup"
                     android:background="@color/colorMain"
@@ -88,7 +90,8 @@
                     android:layout_height="wrap_content"
                     android:text="Tutup"
                     android:textSize="16sp"
-                    android:textColor="#FFFFFFFF" />
+                    android:textColor="#FFFFFFFF"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
