--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -194,12 +194,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:src="@drawable/alarm2"
+                    android:src="@drawable/ic_personn"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
                 <TextView
-                    android:text="Umpan Balik"
+                    android:text="Profil"
                     android:gravity="center"
                     android:textColor="@color/Black"
                     android:textSize="16sp"
