--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:background="@color/colorMain"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="700dp"
             android:orientation="vertical">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_marginTop="50dp"
@@ -22,16 +22,19 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@drawable/kotao"
+                android:id="@+id/photosEmail"
                 />
             <TextView
+
+                android:id="@+id/namaAtas"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Silfi Nur Amalia"
                 android:textColor="#ffff"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
-                android:textSize="21sp"/>
+                android:paddingTop="30dp"
+                android:textSize="20sp"/>
 
         </LinearLayout>
 
@@ -45,21 +48,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="25dp"
+            android:padding="10dp"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_orang"/>
             <TextView
+                android:id="@+id/namaBawah"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Silfi Nur Amalia"
-                android:paddingLeft="30dp"/>
+                android:paddingLeft="15dp"/>
         </LinearLayout>
 
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -69,21 +75,46 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="25dp"
+            android:padding="10dp"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_emaili"/>
             <TextView
+                android:id="@+id/emailProfile"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="nurasysyifauiffsudur@mgail.com"
-                android:paddingLeft="30dp"/>
+                android:paddingLeft="20dp"/>
         </LinearLayout>
 
     </LinearLayout>
+    <LinearLayout
+        android:gravity="center"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            >
+            <Button
+                android:id="@+id/keluar"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorMain"
+                android:text="Keluar"
+                android:textColor="@android:color/white"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
