--- a/app/src/main/res/layout/activity_lihat_kegiatan.xml
+++ b/app/src/main/res/layout/activity_lihat_kegiatan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,4 +12,15 @@
        android:layout_height="wrap_content"
        android:id="@+id/recylce_kegiatan"
        android:scrollbars="vertical"/>
-</RelativeLayout>
+   <TextView
+       android:id="@+id/emptyview_kegiatan"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:gravity="center_horizontal"
+       android:text="@string/emptyview_kegiatan"
+       android:visibility="visible"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"/>
+</android.support.constraint.ConstraintLayout>
