--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,71 +7,23 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     tools:context="org.d3ifcool.rememberactivities.MainActivity">
-<ImageView
-    android:layout_width="130dp"
-    android:layout_height="130dp"
-    android:id="@+id/logo"
-    android:src="@drawable/logoo2"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="30dp"
-    android:layout_marginBottom="16dp"
-    />
-    <EditText
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="158dp"
+        android:layout_marginEnd="123dp"
+        android:src="@drawable/logoo2" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:hint="Email"
-        android:imeOptions="actionNext"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black"
-        android:paddingBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_below="@+id/logo"
-        android:layout_marginTop="16dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/password"
-        android:hint="Password"
-        android:imeOptions="actionDone"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black"
-        android:paddingBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_below="@+id/email"
-        android:layout_marginTop="16dp"
-        android:inputType="textPassword"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:id="@+id/login"
-        android:text="Login"
-        android:background="#FFFF"
-        android:layout_below="@+id/password"
-        android:textColor="@color/Black"
-        android:layout_marginTop="16dp"/>
-
-    <TextView
-        android:id="@+id/atau"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="_______________________OR__________________________"
-        android:layout_below="@+id/login"
-        android:layout_marginTop="16dp"
-        android:gravity="center_horizontal"
-        />
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/atau"
-            android:layout_centerHorizontal="true"
-            />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="28dp" />
 </RelativeLayout>
