--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,25 @@
     android:background="@drawable/background"
     tools:context="org.d3ifcool.rememberactivities.MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="91dp"
+        android:text="Remember Activities"
+        android:textColor="@android:color/white"
+        android:textSize="25dp"
+        android:textStyle="bold" />
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="158dp"
-        android:layout_marginEnd="123dp"
+        android:layout_marginTop="182dp"
+        android:layout_marginEnd="119dp"
         android:src="@drawable/logoo2" />
 
     <com.google.android.gms.common.SignInButton
@@ -24,6 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="59dp"
         android:layout_marginEnd="28dp" />
 </RelativeLayout>
