edit java dan xml

--- a/app/src/main/res/layout/activity_tambah_kegiatan.xml
+++ b/app/src/main/res/layout/activity_tambah_kegiatan.xml
@@ -19,7 +19,8 @@
         android:inputType="text"
         android:paddingTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +31,11 @@
         android:id="@+id/tanggalKegiatan"
         android:paddingTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="tglKgt"
+        android:focusable="false"
+        android:editable="false"
+        android:inputType="date"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,7 +46,10 @@
         android:id="@+id/jamMulai"
         android:paddingTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:inputType="text"
+        android:editable="false"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,7 +60,10 @@
         android:id="@+id/jamBerakhir"
         android:paddingTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:inputType="text"
+        android:editable="false"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,7 +75,9 @@
         android:inputType="text"
         android:paddingTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:editable="false"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
