--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,65 +13,33 @@
     android:id="@+id/logo"
     android:src="@drawable/logoo2"
     android:layout_centerHorizontal="true"
-    android:layout_marginTop="30dp"
+    android:layout_marginTop="75dp"
     android:layout_marginBottom="16dp"
     />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:hint="Email"
-        android:imeOptions="actionNext"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black"
-        android:paddingBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_below="@+id/logo"
-        android:layout_marginTop="16dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/password"
-        android:hint="Password"
-        android:imeOptions="actionDone"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black"
-        android:paddingBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_below="@+id/email"
-        android:layout_marginTop="16dp"
-        android:inputType="textPassword"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:id="@+id/login"
-        android:text="Login"
-        android:background="#FFFF"
-        android:layout_below="@+id/password"
-        android:textColor="@color/Black"
-        android:layout_marginTop="16dp"/>
-
     <TextView
-        android:id="@+id/atau"
-        android:layout_width="match_parent"
+        android:id="@+id/nameapp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="_______________________OR__________________________"
-        android:layout_below="@+id/login"
-        android:layout_marginTop="16dp"
-        android:gravity="center_horizontal"
-        />
-
+        android:text="@string/app_name"
+        android:layout_below="@id/logo"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"/>
+    <TextView
+        android:id="@+id/loginwith"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Masuk dengan akun Google"
+        android:layout_below="@id/nameapp"
+        android:textColor="@android:color/white"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"
+        android:layout_marginTop="75dp" />
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/atau"
+            android:layout_below="@+id/loginwith"
+            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
             />
 </RelativeLayout>
