--- a/app/src/main/res/layout/activity_lihat_kegiatan.xml
+++ b/app/src/main/res/layout/activity_lihat_kegiatan.xml
@@ -23,4 +23,16 @@
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
+   <TextView
+       android:id="@+id/erorkoneksi_kegiatan"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:gravity="center_horizontal"
+       android:text="@string/mohon_cek_koneksi_anda"
+       android:visibility="gone"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
