--- a/app/src/main/res/layout/activity_tambah_kegiatan.xml
+++ b/app/src/main/res/layout/activity_tambah_kegiatan.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:orientation="vertical"
+   android:scrollbars="vertical"
     tools:context="org.d3ifcool.rememberactivities.TambahKegiatanActivity">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,9 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="tglKgt"
-        android:focusable="false"
+        android:inputType="date"
         android:editable="false"
-        android:inputType="date"/>
+        android:focusable="false"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,9 +50,10 @@
         android:paddingTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="false"
         android:inputType="text"
-        android:editable="false"/>
+        android:editable="false"
+        android:focusable="false"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,9 +65,10 @@
         android:paddingTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="false"
         android:inputType="text"
-        android:editable="false"/>
+        android:editable="false"
+        android:focusable="false"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -76,8 +81,9 @@
         android:paddingTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:editable="false"
         android:focusable="false"
-        android:editable="false"/>
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -90,6 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"/>
-
-
 </LinearLayout>
+
+
+</ScrollView>
