--- a/app/src/main/res/layout/activity_rincian_kegiatan.xml
+++ b/app/src/main/res/layout/activity_rincian_kegiatan.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.d3ifcool.rememberactivities.RincianKegiatanActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -16,6 +19,7 @@
         android:clickable="true"
         android:focusable="true"
         map:uiCompass="true" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -131,6 +135,6 @@
         </LinearLayout>
 
     </LinearLayout>
+    </RelativeLayout>
 
-
-</RelativeLayout>
+</ScrollView>
