--- a/app/src/main/res/layout/fragment_tentang_yoga.xml
+++ b/app/src/main/res/layout/fragment_tentang_yoga.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".TentangYoga">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -115,4 +118,5 @@
         </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
